# Claude-Sandbox

./: Plan.md  README.md
.github/workflows/: e2e.yml
Colima/: CLAUDE.md  README.md  pyproject.toml
Colima-Proxy/: CLAUDE.md  README.md  pyproject.toml
Colima-Proxy/docker/: Dockerfile
Colima-Proxy/scripts/: run-app.sh  run-tests.sh  sandbox-start.sh  sandbox-stop.sh
Colima-Proxy/squid/: squid.conf
Colima-Proxy/src/: main.py
Colima/scripts/: run-app.sh  run-tests.sh  sandbox-start.sh  sandbox-stop.sh
Colima/src/: main.py
DinD/: CLAUDE.md  README.md
DinD-Proxy/: CLAUDE.md  README.md  pyproject.toml
DinD-Proxy/docker/: Dockerfile  Dockerfile.claude-cli  Dockerfile.socket-proxy  docker-compose.yaml
DinD-Proxy/scripts/: run-app.sh  run-tests.sh  sandbox-start.sh  sandbox-stop.sh
DinD-Proxy/src/: main.py
DinD/docker/: Dockerfile  Dockerfile.claude-cli  docker-compose.yaml
DinD/scripts/: build-app.sh  run-app.sh  run-tests.sh  sandbox-start.sh  sandbox-stop.sh
DooD/: CLAUDE.md  README.md  pyproject.toml
DooD-Proxy/: CLAUDE.md  README.md  pyproject.toml
DooD-Proxy/docker/: Dockerfile.claude-cli  Dockerfile.squid
DooD-Proxy/docker/socket-proxy/: proxy.py
DooD-Proxy/docker/squid/: squid.conf
DooD-Proxy/scripts/: run-app.sh  run-tests.sh  sandbox-start.sh  sandbox-stop.sh
DooD-Proxy/src/: main.py
DooD/scripts/: run-app.sh  run-tests.sh  sandbox-start.sh  sandbox-stop.sh
DooD/src/: main.py
e2e-tests/: test_colima.sh  test_colima_proxy.sh  test_dind.sh  test_dind_proxy.sh  test_dood.sh  test_dood_proxy.sh
(+2 files in other folders)
