[project]
name = "claude-sandbox-dood-proxy"
version = "0.1.0"
description = "DooD-Proxy spike — FastAPI app for sandbox experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
dood-proxy-app = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py"]

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests/unit"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
